--- a/footer.html
+++ b/footer.html
@@ -10,7 +10,7 @@
                 <div class="col-lg-6">
                     <div class="row m-0">
                         <div class="col-sm-10 m-0">
-                            <form>
+                            <form id="sec-sub-i">
                                 <div class="form-group">
                                     <input type="email" required class="form-control" id="exampleInputEmail1"
                                         aria-describedby="emailHelp" placeholder="Enter Your Email">
@@ -30,7 +30,7 @@
 <div class="container-fluid sec-footer-bg">
     <div class="sec-space-left-right">
         <div class="text-center">
-            <a href="index.html"><img src="images/logo.png" alt=""></a>
+            <a href="index.html"><img class="sec-logo-img" src="images/logo.png" alt=""></a>
             <div class="sec-call">
                 <a class="sec-ico-c" href="tel:+1 352-219-0131"><i class="fa-solid fa-phone sec-icc"></i> &nbsp; +1 352-219-0131</a> &nbsp;  &nbsp;</a>
                 <a class="sec-ico-c" href="mailto:jerryabis@yahoo.com"><i class="fa-solid fa-envelope  sec-icc"></i>  &nbsp;jerryabis@yahoo.com</a>
