--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!-- video -->
     <div class="container secvid-vid">
         <div class="text-center">
-            <video controls poster="/images/gg-bg.png">
+            <video class="w-100" controls poster="/images/gg-bg.png">
                 <source src="#" type="video/mp4">
                 <source src="#" type="video/ogg">
             </video>
@@ -116,7 +116,8 @@
                                 <img class="w-100" src="images/blog-1.png" alt="">
                                 <div class="sec-bgg-bl">
                                     <h5 class="sec-soft-hb">Soft Wash Roof Cleaning</h5>
-                                    <a class="sec-blo-link" href="#">Learn More ></a>
+                                    <p class="sec-blobb">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                        Ipsum has been the industry's.</p>
 
                                 </div>
                             </div>
@@ -126,7 +127,8 @@
                                 <img class="w-100" src="images/blog-2.png" alt="">
                                 <div class="sec-bgg-bl">
                                     <h5 class="sec-soft-hb">Driveway Pressure Wash</h5>
-                                    <a class="sec-blo-link" href="#">Learn More ></a>
+                                    <p class="sec-blobb">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                        Ipsum has been the industry's.</p>
 
                                 </div>
                             </div>
@@ -137,7 +139,8 @@
                                 <img class="w-100" src="images/blog-3.png" alt="">
                                 <div class="sec-bgg-bl">
                                     <h5 class="sec-soft-hb">Whole House Exterior Wash</h5>
-                                    <a class="sec-blo-link" href="#">Learn More ></a>
+                                    <p class="sec-blobb">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                        Ipsum has been the industry's.</p>
 
                                 </div>
                             </div>
@@ -147,7 +150,8 @@
                                 <img class="w-100" src="images/blog-4.png" alt="">
                                 <div class="sec-bgg-bl">
                                     <h5 class="sec-soft-hb">Power Wash Exterior Surface</h5>
-                                    <a class="sec-blo-link" href="#">Learn More ></a>
+                                    <p class="sec-blobb">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                        Ipsum has been the industry's.</p>
 
                                 </div>
                             </div>
@@ -166,7 +170,57 @@
                         when an unknown printer took a galley of type and
                         scrambled it to make a type specimen book.</p>
                     <div class="sec-btn2">
-                        <a class="sec-btn22" href="#">View All Services</a>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn sec-btn22" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            Get Help Now
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">REQUEST A CALL BACK 24/7
+                                        </h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form id="sec-pop-fo">
+                                            <div class="row">
+                                                <div class="col-lg-12 sec-fo-p">
+                                                    <input type="text" class="form-control" placeholder="Full name"
+                                                        required>
+                                                </div>
+                                                <div class="col-lg-6 sec-fo-p">
+                                                    <input type="email" class="form-control" placeholder="*Email"
+                                                        required>
+                                                </div>
+                                                <div class="col-lg-6 sec-fo-p">
+                                                    <input type="number" class="form-control"
+                                                        placeholder="*Phone Number" required>
+                                                </div>
+                                                <div class="col-lg-12 sec-fo-p">
+                                                    <select id="inputState" class="form-control" required>
+                                                        <option selected>Water Damage Restoration</option>
+                                                        <option>...</option>
+                                                    </select>
+                                                </div>
+                                                <div class="col-lg-12 sec-fo-p">
+                                                    <textarea class="form-control form-control-sm mb-3" rows="3"
+                                                        placeholder="What can we help you with? (ex: flooded basement)"></textarea>
+                                                </div>
+                                                <div class="col-lg-12 sec-fo-p">
+                                                    <button type="submit" class="btn sec-btn22">GET HELP NOW!</button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -178,60 +232,24 @@
         <div class="sec-space-left-right">
             <h4 class="sec-gall-main-n">We'll Restore Your Property<br>
                 In Just One Day</h4>
-            <!-- <div class="owl-carousel owl-theme">
-
-                <div class="item">
-                    <div class="img-comp-container">
-                        <div class="img-comp-img">
-                            <img src="images/slid-1.jpg" width="700" height="400">
-                        </div>
-                        <div class="img-comp-img img-comp-overlay">
-                            <img src="images/slid-2.jpg" width="700" height="400">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="img-comp-container">
-                        <div class="img-comp-img">
-                            <img src="images/slid-1.jpg" width="700" height="400">
-                        </div>
-                        <div class="img-comp-img img-comp-overlay">
-                            <img src="images/slid-2.jpg" width="700" height="400">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="img-comp-container">
-                        <div class="img-comp-img">
-                            <img src="images/slid-1.jpg" width="700" height="400">
-                        </div>
-                        <div class="img-comp-img img-comp-overlay">
-                            <img src="images/slid-2.jpg" width="700" height="400">
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-            <!-- normanl -->
             <div class="row">
                 <div class="col-lg-6">
                     <div class="img-comp-container">
                         <div class="img-comp-img">
-                            <img src="images/slid-1.jpg" width="700" height="400">
+                            <img class="sec-a-b-img" src="images/slid-1.jpg">
                         </div>
                         <div class="img-comp-img img-comp-overlay">
-                            <img src="images/slid-2.jpg" width="700" height="400">
+                            <img class="sec-a-b-img" src="images/slid-2.jpg">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="img-comp-container">
                         <div class="img-comp-img">
-                            <img src="images/slid-1.jpg" width="700" height="400">
+                            <img class="sec-a-b-img" src="images/slid-1.jpg">
                         </div>
                         <div class="img-comp-img img-comp-overlay">
-                            <img src="images/slid-2.jpg" width="700" height="400">
+                            <img class="sec-a-b-img" src="images/slid-2.jpg">
                         </div>
                     </div>
                 </div>
@@ -256,6 +274,59 @@
                     Ipsum has been the industry's standard dummy text ever since the
                     when an unknown printer took a galley of type and
                     scrambled it to make a type specimen book.</p>
+                     <div class="sec-btn2">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn sec-btn22" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            Get Help Now
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">REQUEST A CALL BACK 24/7
+                                        </h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form id="sec-pop-fo">
+                                            <div class="row">
+                                                <div class="col-lg-12 sec-fo-p">
+                                                    <input type="text" class="form-control" placeholder="Full name"
+                                                        required>
+                                                </div>
+                                                <div class="col-lg-6 sec-fo-p">
+                                                    <input type="email" class="form-control" placeholder="*Email"
+                                                        required>
+                                                </div>
+                                                <div class="col-lg-6 sec-fo-p">
+                                                    <input type="number" class="form-control"
+                                                        placeholder="*Phone Number" required>
+                                                </div>
+                                                <div class="col-lg-12 sec-fo-p">
+                                                    <select id="inputState" class="form-control" required>
+                                                        <option selected>Water Damage Restoration</option>
+                                                        <option>...</option>
+                                                    </select>
+                                                </div>
+                                                <div class="col-lg-12 sec-fo-p">
+                                                    <textarea class="form-control form-control-sm mb-3" rows="3"
+                                                        placeholder="What can we help you with? (ex: flooded basement)"></textarea>
+                                                </div>
+                                                <div class="col-lg-12 sec-fo-p">
+                                                    <button type="submit" class="btn sec-btn22">GET HELP NOW!</button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </div>
 
@@ -391,6 +462,60 @@
                     </div>
                 </div>
 
+            </div>
+
+            <div class="sec-btn23">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn sec-btn22" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">
+                    Get Help Now
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">REQUEST A CALL BACK 24/7
+                                </h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form id="sec-pop-fo">
+                                    <div class="row">
+                                        <div class="col-lg-12 sec-fo-p">
+                                            <input type="text" class="form-control" placeholder="Full name"
+                                                required>
+                                        </div>
+                                        <div class="col-lg-6 sec-fo-p">
+                                            <input type="email" class="form-control" placeholder="*Email"
+                                                required>
+                                        </div>
+                                        <div class="col-lg-6 sec-fo-p">
+                                            <input type="number" class="form-control"
+                                                placeholder="*Phone Number" required>
+                                        </div>
+                                        <div class="col-lg-12 sec-fo-p">
+                                            <select id="inputState" class="form-control" required>
+                                                <option selected>Water Damage Restoration</option>
+                                                <option>...</option>
+                                            </select>
+                                        </div>
+                                        <div class="col-lg-12 sec-fo-p">
+                                            <textarea class="form-control form-control-sm mb-3" rows="3"
+                                                placeholder="What can we help you with? (ex: flooded basement)"></textarea>
+                                        </div>
+                                        <div class="col-lg-12 sec-fo-p">
+                                            <button type="submit" class="btn sec-btn22">GET HELP NOW!</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
