--- a/header.html
+++ b/header.html
@@ -1,12 +1,12 @@
 <div class="">
     <div class="row m-0">
-<div class="col-lg-4">
+<div class="col col-sm-4">
     <div class="">
-        <a href="index.html"><img class="pt-4" src="images/logo.png" alt=""></a>
+        <a href="index.html"><img class="pt-4 sec-logo-img" src="images/logo.png" alt=""></a>
     </div>
 </div>
-<div class="col-lg-5"></div>
-<div class="col-lg-3">
+<div class="col col-sm-5 sec-dixp-head"></div>
+<div class="col col-sm-3">
     <div class="sec-call-btn">
         <a class="sec-call-btn2" href="tel:352 219 0131"><i class="fa-solid fa-phone"></i> 352 219 0131</a>   
     </div>
