--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <h4 class="sec-gall-main-n">We'll Restore Your Property<br>
                 In Just One Day</h4>
             <div class="row">
-                <div class="col-lg-6">
+                <!-- <div class="col-lg-6">
                     <div class="img-comp-container">
                         <div class="img-comp-img">
                             <img class="sec-a-b-img" src="images/slid-1.jpg">
@@ -242,7 +242,7 @@
                             <img class="sec-a-b-img" src="images/slid-2.jpg">
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-6">
                     <div class="img-comp-container">
                         <div class="img-comp-img">
