--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
     <!-- Services -->
     <div class="container-fluid sec-serv-bg">
         <div class="sec-space-left-right">
-            <div class="row">
+            <div class="row m-0">
                 <div class="col-lg-9">
-                    <div class="row">
+                    <div class="row m-0">
                         <div class="col-lg-6">
                             <!-- 1 -->
                             <div class="sec-blog-1">
@@ -189,7 +189,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <form id="sec-pop-fo">
-                                            <div class="row">
+                                            <div class="row m-0">
                                                 <div class="col-lg-12 sec-fo-p">
                                                     <input type="text" class="form-control" placeholder="Full name"
                                                         required>
@@ -233,7 +233,7 @@
             <h4 class="sec-gall-main-n">We'll Restore Your Property<br>
                 In Just One Day</h4>
             <div class="row">
-                <!-- <div class="col-lg-6">
+                <div class="col-lg-6">
                     <div class="img-comp-container">
                         <div class="img-comp-img">
                             <img class="sec-a-b-img" src="images/slid-1.jpg">
@@ -242,7 +242,7 @@
                             <img class="sec-a-b-img" src="images/slid-2.jpg">
                         </div>
                     </div>
-                </div> -->
+                </div>
                 <div class="col-lg-6">
                     <div class="img-comp-container">
                         <div class="img-comp-img">
@@ -335,10 +335,10 @@
     <!-- counter -->
     <div class="container-fluid  sec-count-bgg">
         <div class="sec-space-left-right">
-            <div class="row text-center">
-                <div class="col">
+            <div class="row m-0 text-center">
+                <div class="col-lg-3">
                     <div class="counter">
-                        <div class="row">
+                        <div class="row m-0">
                             <div class="col-lg-4">
                                 <img src="images/co-1.png" alt="">
                             </div>
@@ -351,9 +351,9 @@
 
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-3">
                     <div class="counter">
-                        <div class="row">
+                        <div class="row m-0">
                             <div class="col-lg-4">
                                 <img src="images/co-2.png" alt="">
                             </div>
@@ -364,9 +364,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-3">
                     <div class="counter">
-                        <div class="row">
+                        <div class="row m-0">
                             <div class="col-lg-4">
                                 <img src="images/co-3.png" alt="">
                             </div>
@@ -377,9 +377,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-3">
                     <div class="counter">
-                        <div class="row">
+                        <div class="row m-0">
                             <div class="col-lg-4">
                                 <img src="images/co-4.png" alt="">
                             </div>
@@ -484,7 +484,7 @@
                             </div>
                             <div class="modal-body">
                                 <form id="sec-pop-fo">
-                                    <div class="row">
+                                    <div class="row m-0">
                                         <div class="col-lg-12 sec-fo-p">
                                             <input type="text" class="form-control" placeholder="Full name"
                                                 required>
