--- a/footer.html
+++ b/footer.html
@@ -16,7 +16,7 @@
                                         aria-describedby="emailHelp" placeholder="Enter Your Email">
                                 </div>
                         </div>
-                        <div class="col-sm-2 m-0">
+                        <div class="col-sm-2 m-0 text-center">
                             <button type="submit" class="btn btn-primary  secsub-ntn"><i
                                     class="fa-sharp fa-solid fa-paper-plane"></i></button>
                             </form>
