--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="container-fluid sec-serv-bg">
         <div class="sec-space-left-right">
             <div class="row m-0">
-                <div class="col-lg-9">
+                <div class="col-lg-8">
                     <div class="row m-0">
                         <div class="col-lg-6">
                             <!-- 1 -->
@@ -133,7 +133,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6  sev-blog-ma">
                             <!-- 3 -->
                             <div class="sec-blog-1">
                                 <img class="w-100" src="images/blog-3.png" alt="">
@@ -160,7 +160,7 @@
 
 
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-4">
                     <h4 class="sec-you-h">Professional,
                         Expert Services
                         For Your Home</h4>
