--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
                                 <img class="w-100" src="images/blog-1.png" alt="">
                                 <div class="sec-bgg-bl">
                                     <h5 class="sec-soft-hb">Soft Wash Roof Cleaning</h5>
-                                    <p class="sec-blobb">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    <p class="sec-blobb">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry. Lorem
                                         Ipsum has been the industry's.</p>
 
                                 </div>
@@ -127,7 +128,8 @@
                                 <img class="w-100" src="images/blog-2.png" alt="">
                                 <div class="sec-bgg-bl">
                                     <h5 class="sec-soft-hb">Driveway Pressure Wash</h5>
-                                    <p class="sec-blobb">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    <p class="sec-blobb">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry. Lorem
                                         Ipsum has been the industry's.</p>
 
                                 </div>
@@ -139,7 +141,8 @@
                                 <img class="w-100" src="images/blog-3.png" alt="">
                                 <div class="sec-bgg-bl">
                                     <h5 class="sec-soft-hb">Whole House Exterior Wash</h5>
-                                    <p class="sec-blobb">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    <p class="sec-blobb">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry. Lorem
                                         Ipsum has been the industry's.</p>
 
                                 </div>
@@ -150,7 +153,8 @@
                                 <img class="w-100" src="images/blog-4.png" alt="">
                                 <div class="sec-bgg-bl">
                                     <h5 class="sec-soft-hb">Power Wash Exterior Surface</h5>
-                                    <p class="sec-blobb">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    <p class="sec-blobb">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry. Lorem
                                         Ipsum has been the industry's.</p>
 
                                 </div>
@@ -274,59 +278,57 @@
                     Ipsum has been the industry's standard dummy text ever since the
                     when an unknown printer took a galley of type and
                     scrambled it to make a type specimen book.</p>
-                     <div class="sec-btn2">
-                        <!-- Button trigger modal -->
-                        <button type="button" class="btn sec-btn22" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal">
-                            Get Help Now
-                        </button>
+                <div class="sec-btn2">
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn sec-btn22" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Get Help Now
+                    </button>
 
-                        <!-- Modal -->
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                            aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="exampleModalLabel">REQUEST A CALL BACK 24/7
-                                        </h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                            aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form id="sec-pop-fo">
-                                            <div class="row">
-                                                <div class="col-lg-12 sec-fo-p">
-                                                    <input type="text" class="form-control" placeholder="Full name"
-                                                        required>
-                                                </div>
-                                                <div class="col-lg-6 sec-fo-p">
-                                                    <input type="email" class="form-control" placeholder="*Email"
-                                                        required>
-                                                </div>
-                                                <div class="col-lg-6 sec-fo-p">
-                                                    <input type="number" class="form-control"
-                                                        placeholder="*Phone Number" required>
-                                                </div>
-                                                <div class="col-lg-12 sec-fo-p">
-                                                    <select id="inputState" class="form-control" required>
-                                                        <option selected>Water Damage Restoration</option>
-                                                        <option>...</option>
-                                                    </select>
-                                                </div>
-                                                <div class="col-lg-12 sec-fo-p">
-                                                    <textarea class="form-control form-control-sm mb-3" rows="3"
-                                                        placeholder="What can we help you with? (ex: flooded basement)"></textarea>
-                                                </div>
-                                                <div class="col-lg-12 sec-fo-p">
-                                                    <button type="submit" class="btn sec-btn22">GET HELP NOW!</button>
-                                                </div>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel">REQUEST A CALL BACK 24/7
+                                    </h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <form id="sec-pop-fo">
+                                        <div class="row">
+                                            <div class="col-lg-12 sec-fo-p">
+                                                <input type="text" class="form-control" placeholder="Full name"
+                                                    required>
                                             </div>
-                                        </form>
-                                    </div>
+                                            <div class="col-lg-6 sec-fo-p">
+                                                <input type="email" class="form-control" placeholder="*Email" required>
+                                            </div>
+                                            <div class="col-lg-6 sec-fo-p">
+                                                <input type="number" class="form-control" placeholder="*Phone Number"
+                                                    required>
+                                            </div>
+                                            <div class="col-lg-12 sec-fo-p">
+                                                <select id="inputState" class="form-control" required>
+                                                    <option selected>Water Damage Restoration</option>
+                                                    <option>...</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-lg-12 sec-fo-p">
+                                                <textarea class="form-control form-control-sm mb-3" rows="3"
+                                                    placeholder="What can we help you with? (ex: flooded basement)"></textarea>
+                                            </div>
+                                            <div class="col-lg-12 sec-fo-p">
+                                                <button type="submit" class="btn sec-btn22">GET HELP NOW!</button>
+                                            </div>
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
 
@@ -407,11 +409,15 @@
                             <div class="sec-img-vv">
                                 <img class="" src="images/v-1.png" alt="">
                             </div>
-                            <h4 class="sec-main-pp-v">Courtney Henry</h4>
-                            <p class="sec-main-n-p">Nursing Assistant</p>
-                            <p class="sec-vew-pp-d">Aliqua id fugiat nostrud irure ex duis ea quis quis ad et. Sunt qui
-                                esse pariatur duis
-                                deserunt mollit dolore cillum minim tempor enim.</p>
+                            <h4 class="sec-main-pp-v">Ashley Murphy</h4>
+                            <p class="sec-main-n-p">Home Inspectors</p>
+                            <p class="sec-vew-pp-d">I am both a satisfied personal client and an enthusiastic referrer
+                                of The Fun-gi's Cleaning Services. Jerry's craftsmanship is simply unparalleled - he has
+                                a knack for making old things look new again with remarkable attention to detail. His
+                                professionalism, courtesy, and kindness create an enjoyable experience throughout the
+                                process. Whether it's for my personal belongings or when recommending them to clients,
+                                The Fun-gi consistently delivers top-notch results in a timely manner. Without
+                                hesitation, I highly recommend The Fun-gi's!</p>
                             <img class="w-100" src="images/star-2.png" alt="">
                         </div>
                     </div>
@@ -422,11 +428,18 @@
                             <div class="sec-img-vv">
                                 <img class="" src="images/v-2.png" alt="">
                             </div>
-                            <h4 class="sec-main-pp-v">Courtney Henry</h4>
-                            <p class="sec-main-n-p">Nursing Assistant</p>
-                            <p class="sec-vew-pp-d">Aliqua id fugiat nostrud irure ex duis ea quis quis ad et. Sunt qui
-                                esse pariatur duis
-                                deserunt mollit dolore cillum minim tempor enim.</p>
+                            <h4 class="sec-main-pp-v">Carol</h4>
+                            <p class="sec-main-n-p">Self Employed</p>
+                            <p class="sec-vew-pp-d">Over the years I have had the opportunity to call upon Jerry Abis
+                                the owner of "The Fun Gi's" to perform work at my home. I am no different than most, I
+                                feel like my home is my castle and selecting the right company to do work at your home
+                                can bring on an onslaught of concerns not to mention be challenging and stressful. Will
+                                he take on a job he cannot handle, is he honest, will he show up, will the price be as
+                                he quoted, will my property be damaged, or will he do the job carefully and completely
+                                as if the home belonged to him? If you can relate to any of what I have just mentioned
+                                and you have roof washing, pool deck cleaning and various other around the house jobs
+                                that need attending to, I would recommend that you contact "The Fun Gi's." I did and I
+                                have been pleased with the outcome.</p>
                             <img class="w-100" src="images/star-1.png" alt="">
                         </div>
                     </div>
@@ -446,28 +459,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="item">
-                    <div class="secvie-bgg">
-                        <div class="text-center">
-                            <div class="sec-img-vv">
-                                <img class="" src="images/v-2.png" alt="">
-                            </div>
-                            <h4 class="sec-main-pp-v">Courtney Henry</h4>
-                            <p class="sec-main-n-p">Nursing Assistant</p>
-                            <p class="sec-vew-pp-d">Aliqua id fugiat nostrud irure ex duis ea quis quis ad et. Sunt qui
-                                esse pariatur duis
-                                deserunt mollit dolore cillum minim tempor enim.</p>
-                            <img class="w-100" src="images/star-1.png" alt="">
-                        </div>
-                    </div>
-                </div>
+                
 
             </div>
 
             <div class="sec-btn23">
                 <!-- Button trigger modal -->
-                <button type="button" class="btn sec-btn22" data-bs-toggle="modal"
-                    data-bs-target="#exampleModal">
+                <button type="button" class="btn sec-btn22" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Get Help Now
                 </button>
 
@@ -486,16 +484,14 @@
                                 <form id="sec-pop-fo">
                                     <div class="row m-0">
                                         <div class="col-lg-12 sec-fo-p">
-                                            <input type="text" class="form-control" placeholder="Full name"
-                                                required>
+                                            <input type="text" class="form-control" placeholder="Full name" required>
                                         </div>
                                         <div class="col-lg-6 sec-fo-p">
-                                            <input type="email" class="form-control" placeholder="*Email"
-                                                required>
+                                            <input type="email" class="form-control" placeholder="*Email" required>
                                         </div>
                                         <div class="col-lg-6 sec-fo-p">
-                                            <input type="number" class="form-control"
-                                                placeholder="*Phone Number" required>
+                                            <input type="number" class="form-control" placeholder="*Phone Number"
+                                                required>
                                         </div>
                                         <div class="col-lg-12 sec-fo-p">
                                             <select id="inputState" class="form-control" required>
