--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         </div>
         <div class="row m-0  sec-mar-mee">
             <div class="col-lg-6">
-                <img class="sec-man-img" src="images/man.png" alt="">
+                <img class="img-fluid imgstyle" src="images/man.png" alt="">
             </div>
             <div class="col-lg-6">
                 <p class="sec-hellop-p">Hello</p>
