--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="container secvid-vid">
         <div class="text-center">
             <video class="w-100" controls poster="/images/gg-bg.png">
-                <source src="#" type="video/mp4">
+                <source src="videos/video.mp4" type="video/mp4">
                 <source src="#" type="video/ogg">
             </video>
         </div>
