--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div include-html="header.html" id="header-file"></div>
 
             <div class="sec-main-head">
-                <h3>Exterior Home Washing <br>
-                    Services that Reduce <br>
-                    Repair Costs</h3>
+                <h3>Specializing in<br>
+                    exterior home <br>
+                    cleaning needs</h3>
 
                 <div class="sec-btn">
                     <a class="sec-btn22" href="#">Book Now</a>
