--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
         <div class="sec-space-left-right">
             <div class="row m-0">
                 <div class="col-lg-6">
-                    <h4 class="sec-you-h">Your Trusted Home
-                        Services Experts</h4>
+                    <h4 class="sec-you-h">Proudly Serving Ocala & 
+                        Marion County for Over 
+                        23 Years.</h4>
                     <p class="sec-amet-p">Amet minim mollit non deserunt ullamco sit aliqua dolor do consequat sunt
                         nostrud amet. Amet
                         minim mollit non deserunt ullamco aliqua dolo consequat sunt nostrud amet. Amet minim mollit non
